[package]
name = "backend"
version = "0.1.0"
authors = ["Sam Delmerico <svdelmerico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rspotify = "0.10.0"
serde = "1.0.116"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
