[package]
name = "backend"
version = "0.1.0"
authors = ["Sam Delmerico <svdelmerico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-rt = "1.1.1"
serde = "1.0.116"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
